--- a/advanced-jaxrs-master/advanced-jaxrs-04/.project
+++ b/advanced-jaxrs-master/advanced-jaxrs-04/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>messenger</name>
+	<name>advanced-jaxrs-04</name>
 	<comment></comment>
 	<projects>
 	</projects>
